--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
+
   },
   "dependencies": {
     "react": "^19.0.0",
